test/lambda/negative/syntax/unexpected_eof.ls
// @expect-error: E104
// @description: Unexpected end of file - incomplete expression

let x = 1 +
